--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,103 @@
   font-family: "Raleway", sans-serif;
 }
 
-.section1 .container .heading {
-  margin-top: 2.5rem;
+.wrap {
+  background-color: #c7eafe;
+  min-height: 100vh;
 }
 
-.section1 .container .heading h1 {
+.section1 .container-lg {
+  margin: 0 1rem;
+}
+
+.section1 .container-lg .heading {
+  padding-top: 2.5rem;
+}
+
+.section1 .container-lg .heading h1 {
+  color: #324ca8;
   font-size: 2rem;
   font-weight: 800;
 }
 
-.section1 .container .todo-list .col-lg-6 {
-  border: magenta solid thin;
+.section1 .container-lg .row {
+  margin: 0;
+}
+
+.section1 .container-lg .todo-list {
+  text-align: center;
+}
+
+.section1 .container-lg .todo-list .col-lg-3 {
+  margin: 0.2rem 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.section1 .container-lg .todo-list .todo-container {
+  border-radius: 0.5rem;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  height: 3.5rem;
+}
+
+.section1 .container-lg .todo-list .todo-container .checkbox {
+  position: relative;
+  height: 100%;
+  width: 17%;
+}
+
+.section1 .container-lg .todo-list .todo-container .checkbox .box {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10rem;
+  border: solid #9A9A9A thin;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.section1 .container-lg .todo-list .todo-container .todo-texts {
+  padding-left: 1rem;
+  height: 100%;
+  width: 66%;
+  text-align: left;
+}
+
+.section1 .container-lg .todo-list .todo-container .todo-texts h2 {
+  font-size: 1.2rem;
+}
+
+.section1 .container-lg .todo-list .todo-container .todo-texts h3 {
+  font-size: 1rem;
+}
+
+.section1 .container-lg .todo-list .todo-container .todo-star {
+  position: relative;
+  height: 100%;
+  width: 17%;
+  font-size: 1.5rem;
+}
+
+.section1 .container-lg .todo-list .todo-container .todo-star .star-five {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.section1 .container-todo-list {
+  margin: 0 0.5rem;
 }
 /*# sourceMappingURL=styles.css.map */
