--- a/styles.scss
+++ b/styles.scss
@@ -1,39 +1,106 @@
-$main-font: 'Raleway', sans-serif;
+$main-font: "Raleway", sans-serif;
+$main-color: #c7eafe;
+$main-font-color: #324ca8;
+$second-font-color: #5b5b5b;
+$third-font-color: black;
 
-*{
-    margin:0;
+* {
+    margin: 0;
     font-family: $main-font;
 }
 
-.wrap{
-    //border:thin red solid;
+.wrap {
+    background-color: $main-color;
+    min-height: 100vh;
 }
 
-.section1{
+.section1 {
+    .container-lg {
+        margin: 0 1rem;
 
-    .container{
-
-        .heading{
-            margin-top:2.5rem;
-            h1{
-                font-size:2rem;
+        .heading {
+            padding-top: 2.5rem;
+            h1 {
+                color: $main-font-color;
+                font-size: 2rem;
                 font-weight: 800;
             }
         }
 
-        .todo-list{
+        .row {
+            margin: 0;
+        }
 
-            // .col-sm-12{
-            //     border:green solid thin;
-            // }
-            .col-lg-6{
-                border:magenta solid thin;
+        .todo-list {
+            text-align: center;
+
+            .col-lg-3 {
+                margin:0.2rem 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            .todo-container {
+                border-radius: 0.5rem;
+                background-color: white;
+                display: flex;
+                position: relative;
+                height: 3.5rem;
+
+                .checkbox {
+                    position: relative;
+                    height: 100%;
+                    width: 17%;
+                    //border: black solid thin;
+
+                    .box {
+                        width: 1.25rem;
+                        height: 1.25rem;
+                        box-sizing: border-box;
+                        border-radius: 10rem;
+                        border: solid #9A9A9A thin;
+
+                        margin: 0;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+
+                .todo-texts {
+                    padding-left:1rem;
+                    height: 100%;
+                    width: 66%;
+                    text-align: left;
+
+                    h2 {
+                        font-size: 1.2rem;
+                    }
+
+                    h3 {
+                        font-size: 1rem;
+                    }
+                }
+
+                .todo-star {
+                    position: relative;
+                    height: 100%;
+                    width: 17%;
+                    font-size: 1.5rem;
+                    .star-five{
+                        margin: 0;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
             }
         }
     }
+
+    .container-todo-list {
+        margin: 0 0.5rem;
+    }
 }
-
-
-
-
-
