--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 * {
   margin: 0;
   font-family: "Raleway", sans-serif;
@@ -75,6 +77,14 @@
   text-align: left;
 }
 
+.section1 .container-lg .todo-list .todo-container .todo-texts .text-container {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
 .section1 .container-lg .todo-list .todo-container .todo-texts h2 {
   font-size: 1.2rem;
 }
@@ -100,6 +110,6 @@
 }
 
 .section1 .container-todo-list {
-  margin: 0 0.5rem;
+  margin: 0rem;
 }
 /*# sourceMappingURL=styles.css.map */
