--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 $main-font: "Raleway", sans-serif;
 $main-color: #c7eafe;
 $main-font-color: #324ca8;
 $second-font-color: #5b5b5b;
 $third-font-color: black;
+
+
 
 * {
     margin: 0;
@@ -74,6 +79,13 @@ $third-font-color: black;
                     width: 66%;
                     text-align: left;
 
+                    .text-container{
+                        margin: 0;
+                        position: absolute;
+                        top: 50%;
+                        transform: translateY(-50%);
+                    }
+
                     h2 {
                         font-size: 1.2rem;
                     }
@@ -101,6 +113,6 @@ $third-font-color: black;
     }
 
     .container-todo-list {
-        margin: 0 0.5rem;
+        margin: 0rem;
     }
 }
